--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -200,7 +200,7 @@ iframe { border: none; display: block; width: 100%; }
 
 .section-game { background-color: #ffffff; }
 .section-game .fullscreen { display: -webkit-inline-box; display: -webkit-inline-flex; display: -moz-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-align-self: auto; position: relative; width: 100%; }
-.section-game .wrapper { max-width: 1260px; padding: 96px 0; margin: auto auto; flex: 1; }
+.section-game .wrapper { max-width: 1260px; padding: 96px 0; margin: auto auto; flex: 1; width: 100%; }
 .section-game .arrow { position: absolute; color: #929394;  font-size: 15px; text-align: center; left: 0; right: 0; bottom: 0; }
 .section-game .arrow span { display: block; text-transform: uppercase; }
 .section-game .arrow img { width: 32px; padding-bottom: 16px; opacity: 0.5; }
