--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -212,7 +212,7 @@ iframe { border: none; display: block; width: 100%; }
 .about-the-game.gray { background-color: #f9f9f9; }
 .about-the-game-carousel { position: relative; }
 .about-the-game-carousel h2 { color: #494949; font-size: 32px; padding: 5% 0; margin: 0; }
-.about-the-game-carousel .item { padding: 7.5%; }
+.about-the-game-carousel .item { padding: 15% 12.5% 7.5%; }
 .about-the-game-carousel .item a { background-color: #9ebc42; display: inline-block;  }
 .about-the-game-carousel .item img { margin-bottom: 28px; max-width: 100%; padding-bottom: initial; }
 .about-the-game-carousel .item p { margin: 0; color: #4a4a4a; }
@@ -221,6 +221,16 @@ iframe { border: none; display: block; width: 100%; }
 .about-the-game-carousel .navi img.arrow { padding-bottom: initial; }
 .about-the-game-carousel .navi .arrow.left { left: -32px; }
 .about-the-game-carousel .navi .arrow.right { right: -32px; }
+
+.play-our-game { background-color: #ffffff; text-align: center; padding: 64px 0; overflow: hidden; position: relative; }
+.play-our-game h1 { display: block; font-family: 'akzidenz-light-cn'; font-weight: normal; text-transform: uppercase; color: #666; font-size: 50px; margin: 0 auto; padding: 0 16px; }
+.play-our-game p { font-family: 'akzidenz-light-cn'; font-weight: normal; font-size: 20px; line-height: 20px; color: #696969; padding: 0 16px; }
+.play-our-game img { max-width: 100%; }
+.play-our-game.gray { background-color: #f9f9f9; }
+.play-our-game .left { margin-top:64px; display: inline-block; width: 34%; margin-right: -5px; padding-right: 2%; border-right: 1px solid #cccccc; }
+.play-our-game .right { margin-top: 24px;  display: inline-block; width: 62%; padding-left: 2%; vertical-align: top; }
+.play-our-game a { background-color: #f3f3f3; border-radius: 3px; box-shadow: 0px 2px 2px rgba(0,0,0,0.15); color: #666666; cursor: pointer; display: table; font-size: 32px; margin: 11px auto 10px; padding: 6px 24px; font-family: 'akzidenz-light-cn'; text-decoration: none; }
+.play-our-game a:hover { background-color: #e3794d; color: #ffffff; }
 
 .section-testimonial { background-color: #ffffff; }
 .section-testimonial .row { margin: 0; }
@@ -252,8 +262,8 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
     .section-five h3 { font-size: 36px; }
     .section-five .cell { padding: 0 5%; }
 
-    .about-the-game-carousel .navi .arrow.left { left: 32px; }
-    .about-the-game-carousel .navi .arrow.right { right: 32px; }
+    .about-the-game-carousel .navi .arrow.left { left: 16px; }
+    .about-the-game-carousel .navi .arrow.right { right: 16px; }
 }
 @media(max-width:960px){
 	/*these will override the '.small' nav class properties for small devices*/
@@ -299,6 +309,9 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
     .section-five .cell.image.hide-mobile { display: block; }
     .section-five .cell.image img { border-radius: 50%; margin-top: 24px; }
     .section-five.mobile-padding { padding: 10% 0px; background-color: #fff; }
+
+    .play-our-game .left { display: block; margin: 24px auto; border: none; width: 100%; }
+    .play-our-game .right { display: block; margin: 24px auto; width: 100%; }
 }
 @media(max-height: 639px) and (orientation: landscape){
     .nav { position: initial; }
