initialize what we do carousel

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -246,6 +246,26 @@ iframe { border: none; display: block; width: 100%; }
 .section-testimonial button { border: none; background-color: #f3f3f3; color: #666666; font-size: 32px; font-family: 'akzidenz-light-cn'; font-weight: normal; border-radius: 3px; box-shadow: 0 2px 2px rgba(0,0,0,0.15); padding: 0 16px; }
 .section-testimonial form [class*="col-"] { padding: 12px; }
 
+.what-we-do { background-color: #ffffff; padding-top: 48px;  }
+.what-we-do h1 { display: block; font-family: 'akzidenz-light-cn'; font-weight: normal; text-transform: uppercase; color: #666; font-size: 50px; margin: 0 auto; padding: 0 24px 12px; text-align: center; }
+.what-we-do .wrapper { max-width: 840px; margin: 0 auto; position: relative; }
+.what-we-do .what-we-do-carousel-nav .item { text-align: center; }
+.what-we-do .what-we-do-carousel-nav .item img { padding: 0px 16px 16px; max-height: 32px; max-width: 32px; }
+.what-we-do .what-we-do-carousel-nav .item img:hover { cursor: pointer; }
+.what-we-do .what-we-do-carousel-content { position: relative; }
+.what-we-do .what-we-do-carousel-content .item { border-bottom: 1px solid #eeeeee; }
+.what-we-do .what-we-do-carousel-content .left { display: inline-block; width: 25%; margin-right: -4px; vertical-align: middle; }
+.what-we-do .what-we-do-carousel-content .right { display: inline-block; width: 75%; margin-right: -20px; padding-left: 16px; vertical-align: middle; }
+.what-we-do .what-we-do-carousel-content h3 { display: block; font-family: 'akzidenz-light-cn'; font-weight: normal; text-transform: uppercase; color: #666; font-size: 50px; margin: 0 auto; padding: 12px 0 0; text-align: right; }
+.what-we-do .what-we-do-carousel-content ul { list-style: none; padding: 0; margin: 0; text-align: right; }
+.what-we-do .what-we-do-carousel-content ul li { font-size: 20px; font-family: 'akzidenz-light-cn'; color: #666; margin: 0; line-height: 28px; }
+.what-we-do .what-we-do-carousel-content img { display: block; max-width: 100%; }
+.what-we-do .navi { position: absolute; left:0;right:0;top:0;bottom:0; pointer-events: none; }
+.what-we-do .navi .arrow { width: auto; position: absolute; top:40%; margin-top: -36px; cursor: pointer; pointer-events:auto; }
+.what-we-do .navi img.arrow { padding-bottom: initial; }
+.what-we-do .navi .arrow.left { left: -50px; }
+.what-we-do .navi .arrow.right { right: -50px; }
+
 .footer { background-color: #FFF; padding-bottom: 200px; }
 .footer .wrapper { padding: 0px 12px; }
 .footer .left { display: inline-block; width: 50%; margin-right: -4px; }
@@ -279,6 +299,7 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
     .section-five .next { display: none; }
     .section-five h3 { font-size: 32px; }
     .section-five p { font-size: 18px; }
+    .what-we-do .navi { display: none; }
 }
 @media(max-width:767px){
     .nav .left { height: 48px; margin: 8px 0px; }
@@ -312,6 +333,11 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
 
     .play-our-game .left { display: block; margin: 24px auto; border: none; width: 100%; }
     .play-our-game .right { display: block; margin: 24px auto; width: 100%; }
+
+    .what-we-do .what-we-do-carousel-content .left { display: block; width: 100%; }
+    .what-we-do .what-we-do-carousel-content .right { display: block; width: 100%; padding: 0; }
+    .what-we-do .what-we-do-carousel-content h3 { text-align: center; font-size: 32px; }
+    .what-we-do .what-we-do-carousel-content ul { text-align: center; }
 }
 @media(max-height: 639px) and (orientation: landscape){
     .nav { position: initial; }
