--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1352,6 +1352,38 @@ iframe {
 .what-we-do .navi .arrow.right {
   right: -50px; }
 
+.section-animation {
+  position: relative;
+  text-align: center; }
+  .section-animation h1 {
+    color: #666;
+    display: block;
+    font-family: 'akzidenz-light-cn';
+    font-size: 50px;
+    font-weight: normal;
+    left: 0;
+    margin: 0 auto;
+    right: 0;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 0 16px;
+    position: absolute; }
+    .section-animation h1.white {
+      color: #fff; }
+  .section-animation p {
+    color: #696969;
+    font-family: 'akzidenz-light-cn';
+    font-weight: normal;
+    font-size: 20px;
+    left: 0;
+    line-height: 20px;
+    padding: 0 16px;
+    position: absolute;
+    right: 0;
+    text-align: center; }
+    .section-animation p.white {
+      color: #fff; }
+
 .footer {
   background-color: #FFF;
   padding-bottom: 200px; }
