--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -1,7 +1,7 @@
 
 html { background-color: #cccccc; }
 body { background-color: #ffffff; font-family: 'akzidenz-cn'; }
-iframe { border: none; display: block; width: 100%; }
+iframe { border: none; display: block; width: 1px; min-width: 100%; }
 
 .nav { display: block; height: 80px; position: fixed; z-index: 1000; width: 100%; top:0; left:0; right:0; background-color: #FFF; overflow:hidden; }
 .nav .left { float: left; height: inherit; position: relative; }
