--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -267,6 +267,8 @@ iframe { border: none; display: block; width: 1px; min-width: 100%; }
 .what-we-do .navi .arrow.left { left: -50px; }
 .what-we-do .navi .arrow.right { right: -50px; }
 
+
+
 .section-animation {
 	position: relative;
 	text-align: center;
@@ -314,6 +316,27 @@ iframe { border: none; display: block; width: 1px; min-width: 100%; }
 
 textarea:hover, input:hover, textarea:active, input:active, textarea:focus, input:focus, button:focus, button:active, button:hover, label:focus, .btn:active, .btn.active { outline:0px !important; -webkit-appearance:none; }
 .soft-button { border: none; background-color: #f3f3f3; color: #666666; display: inline-block; font-size: 32px !important; font-family: 'akzidenz-light-cn'; font-weight: normal; border-radius: 3px; box-shadow: 0 2px 2px rgba(0,0,0,0.15); margin: 24px 12px; padding: 4px 16px; }
+
+#award {
+    h1 { top: 128px; }
+    p { top: 640px; }
+}
+#eight {
+    h1 { top: 550px; }
+    p { top: 600px; }
+}
+#clock {
+    h1 { top: 550px; }
+    p { top: 600px; }
+}
+#water {
+    h1 { top: 520px; }
+    p { top: 570px; }
+}
+#bed {
+    h1 { top: 520px; }
+    p { top: 570px; }
+}
 
 @media(max-width:1200px){ 
     .section-five p { font-size: 18px; }
@@ -381,6 +404,15 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
     .what-we-do .what-we-do-carousel-content img { padding-left: 24px !important; padding-right: 24px !important; }
     .what-we-do .navi .arrow.left { left: 12px; }
     .what-we-do .navi .arrow.right { right: 12px; }
+    
+    #award {
+        h1 { top: 128px; }
+        p { top: 640px; }
+    }
+    #eight,#clock, #water, #bed {
+        h1 { position: initial; }
+        p { position: initial; padding: 0 0 36px 0; margin-bottom: 0; }
+    }
 }
 @media(max-height: 639px) and (orientation: landscape){
     .nav { position: initial; }
