--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -135,6 +135,7 @@ iframe { border: none; display: block; width: 1px; min-width: 100%; }
 .section-three .owl-carousel { text-align: center;}
 .section-three .owl-carousel .item { padding: 6px; /*cursor:ew-resize;*/ }
 .section-three .owl-carousel img { width: 100%; }
+.section-three .owl-carousel.fix-height img { max-height: 100%; width: auto; }
 .section-three .owl-carousel.awards img { max-width: 100%; width: auto; }
 .section-three .owl-carousel img.shadow { box-shadow: 0px 3px 10px #999; }
 .section-three .owl-carousel .owl-pagination { position: absolute; left: 0; right: 0px; margin: 0 auto; }
