--- a/games/business-cards/www/css/stylesheet.css
+++ b/games/business-cards/www/css/stylesheet.css
@@ -22,7 +22,8 @@ input[type="text"] { border: 2px solid #cccccc !important; margin: 12px 0; }
 }
 .ok:hover { opacity: 0.5; }
 .cancel { display: none !important; }
-.retry {
+.name { font-size: 24px; margin-top: 0px; }
+.action-button {
     background-color: #f3f3f3;
     border-radius: 3px;
     box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
@@ -33,7 +34,7 @@ input[type="text"] { border: 2px solid #cccccc !important; margin: 12px 0; }
     margin: 11px auto 10px;
     padding: 0px 24px;
 }
-.retry:hover { box-shadow: inset 0 1px 1px rgba(0,0,0,0.05); }
+.action-button:hover { box-shadow: inset 0 1px 1px rgba(0,0,0,0.05); }
 .noselect { -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .content { margin: 0 auto; display: flex; }
 .wrapper { width: 1260px; margin: auto auto; }
