--- a/games/business-cards/www/css/stylesheet.css
+++ b/games/business-cards/www/css/stylesheet.css
@@ -40,6 +40,8 @@ input[type="text"] { border: 2px solid #cccccc !important; margin: 12px 0; }
 .wrapper { width: 1260px; margin: auto auto; }
 .row { margin-right: 0; margin-left: 0; display: flex; align-items: center; width: 100%; }
 .alertify .dialog nav, .alertify .alert nav { text-align: center !important; }
+.alertify .dialog ul { list-style: none; padding: 0; font-size: 21px; }
+.alertify .dialog ul li:nth-child(odd) { background-color: #f1f1f1; }
 .top-border { border-top: 1px solid #cccccc; padding-top: 32px; margin-top: 32px; }
 
 #currentTime { color: #e67c49; }
