--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1634,6 +1634,9 @@ textarea:hover, input:hover, textarea:active, input:active, textarea:focus, inpu
     display: none; } }
 
 @media (max-width: 480px) {
+  .section-animation {
+    display: inline-block;
+    width: 100%; }
   .nav {
     overflow: visible; }
   .nav .right .button {
